# zmongo_retriever

./: .gitignore  BENCHMARKS_MONGO_SHELL_REDIS.md  BENCHMARKS_ZMONGO.md  BENCHMARKS_ZMONGO_VS_MONGO_SHELL_AND_REDIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_VIRTUAL_ENVIRONMENT.md  DOCUMENTATION.md  GITHUB_MERGE.md  GITHUB_UPDATE.md  GITHUB_UPDATE_XYZZY.md  LICENSE.md  MAKEFILE_GUIDE.md  MANIFEST.ini  Makefile  PIP_COMMANDS.md  README.md  RELEASE_TEST_PYPI.md  SECURITY.md  SETUP.md  SPHINX_DOCUMENTATION.md  UNDERSTANDING_KEY_SELECTION.md  ZMONGO_EMBEDDER.md  ZMongoRetriever.md  __init__.py  ace_tools.py  hello_zmongo.py  hello_zmongo_service.py  pyproject.toml  requirements.txt  setup.py  system_manager.py  test_hello_zmongo.py  test_hellow_zmongo.py  zconstants.py  zconstants_BAK.py  zmongo.py  zmongo_hyper_speed_demo.py  zmongo_manager.py  zmongo_retriever.py  (+3 more)
.github/: dependabot.yml
BAK/: README_OLD.md  README_v_0_1_5.MD  zmongo_embedding_processor.py
actions-runner/: .credentials  .credentials_rsaparams  .path  .runner  svc.sh
benchmarks/: benchmark_logger.py  benchmark_results.txt  benchmark_zmagnum_zmongo.py  benchmark_zmongo.py  compare_zmongo_zmagnum.py  run_all_test_and_summarize.py  summarize_tests.py  test_all_summaries.py  test_insert_documents_empty.py  test_mongo_delete_cache.py  test_real_db_comparative_benchmarks.py  test_real_vs_zmongo_benchmarks.py  zmagnum_benchmarks.py  zmagnum_zmongo_benchmark.py  zmongo_benchmark_comparison.py  zmongo_speed_demo.py  zmongo_test_summary.json
docs/: DOCUMENTATION.md  EXAMPLE.md  GET_OPENAI_API_KEY.md  INSTALL_MONGODB.md  JSON_KEYS.md  PIP_CHEATSHEET.md  PYDANTIC_ZMONGO.md  README.md  ZMONGO.md  ZMONGO_ADVANTAGES.md  ZMONGO_EMBEDDER.md  ZMONGO_EMBEDDER_README.md  ZMONGO_MODE_GUIDE.md  ZMONGO_USEAGE.md  requirements.txt
documents/: CREATE_VIRTUAL_ENVIRONMENT.md  DOCUMENTATION.md  EXAMPLE.md  GET_OPENAI_API_KEY.md  INSTALL_DOLPHIN_MISTRAL.md  INSTALL_MONGODB.md  MIT_LICENSE_COMPATIBILITY.md  PAGE_CONTENT_KEYS.md  SETUP_ENV_ZMONGO_RETRIEVER.md  UNDERSTANDING_KEY_SELECTION.md  USE_CASE_ANALYSIS.md  ZMONGO.md  ZMONGO_EMBEDDER.md  ZRETRIEVER.md  sample.json
examples/: EXAMPLE.md  data_pipeline_demo.py  demo_zmongo_embedder.py  embedder_demo.py  face_presence_checker.py  find_large_files.py  hello_zmongo.py  hello_zmongo_retriever.py  llama_main.py  llama_model.py  make_notebook_example.py  openai_example.py  openai_main.py  openai_model.py  sample.json  simple_toy_gan.py  start_gan.py  start_zmlp.py  video_face_example.py  video_face_extractor.py  zmagnum_real_performance.py  zmongo_main.py  zmongo_model_machine.py  zmongo_retriever_demo.ipynb  zmongo_retriever_demo.py
models/: llama_model.py  llama_result_saver.py  openai_model.py
notebooks/: ZMongo_Notebook_Demo.ipynb  zmongo_notebook_demo.ipynb  zmongo_retriever_demo.ipynb
tests/: benchmark_logger.py  benchmark_results.txt  test_buffered_ttl_cache.py  test_compare_bulk_write.py  test_data_processing.py  test_embed_and_store_method.py  test_insert_documents_empty.py  test_json_keys.py  test_llama_model_download.py  test_openai_model_real.py  test_real_vs_zmongo_benchmarks.py  test_safe_result.py  test_unified_vector_search.py  test_zmongo.py  test_zmongo_cache.py  test_zmongo_comparative_benchmarks.py  test_zmongo_comparison.py  test_zmongo_embedder.py  test_zmongo_embedder_embed_and_store_error.py  test_zmongo_embedder_embed_text.py  test_zmongo_embedder_token_truncation.py  test_zmongo_env.py  test_zmongo_performance.py  test_zmongo_retriever.py  test_zmongo_retriever_facts.py  test_zmongo_with_real_data.py  test_zretriever.py  zmongo_hyper_speed_demo.py  zmongo_test_summary.json
utils/: write_buffer.py
zai_toolbag/: __init__.py  demo_zai.py  openai_model.py  ttl_cache.py  video_face_extractor.py  zai_model.py  zllama.py
zgemini/: chat_corrector.py  gemini_chat_service.py  zmongo_gemini_file_service.py
zmongo/: embedding_query_processor.py  embedding_visualizer.py  interrogator_chat.py  repository_singletion.py  zconstants.py  zconstants_zmongo_BAK.py  zmongo_chunker.py  zmongo_embedder.py  zmongo_hyper_speed.py  zmongo_hyper_speed_demo.py  zmongo_manager.py  zmongo_repository.py  zmongo_repository_122724_0221.py  zmongo_repository_main.py  zmongo_retriever.py
zmongo_retriever/: .env_zmongo_retriever  Document.py  ZMongoRetriever.py  (+6 more)
(+305 files in other folders)
