[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zmongo_retriever"
version = "0.1.6"
description = "Seamless MongoDB retrieval operations using OpenAI GPT and local LLaMA models."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "CentralFloridaAttorney" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pymongo",
    "motor",
    "pandas",
    "openai",
    "beautifulsoup4",
    "nest_asyncio",
    "nbformat",
    "ace-tools",
    "matplotlib",
    "opencv-python",
    "mtcnn",
    "langchain",
    "astor",
    "numpy",
    "tiktoken",
    "google-generativeai",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-core",
    "llama-cpp-python",
    "hnswlib"
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.10.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
test = [
    "pytest",
    "pytest-asyncio",
    "coverage[toml]",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "furo"
]
notebooks = [
    "jupyterlab",
    "ipykernel",
    "ipywidgets"
]
lint = [
    "flake8",
    "pylint",
    "bandit"
]

[project.urls]
Homepage = "https://github.com/CentralFloridaAttorney/zmongo_retriever"
Repository = "https://github.com/CentralFloridaAttorney/zmongo_retriever"
Issues = "https://github.com/CentralFloridaAttorney/zmongo_retriever/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["zmongo_toolbag*"]
exclude = ["tests*", "docs*"]
